--- a/tex/bib/vernadsky.bib
+++ b/tex/bib/vernadsky.bib
@@ -334,6 +334,17 @@
   hyphenation =	{russian},
 }
 
+@inbook { vernadsky1927mysli,
+  author =	{Владимир Иванович Вернадский},
+  title =	{Мысли о современном значении истории знаний},
+  booktitle =	{Труды Комиссии по истории знаний},
+  volume =	{1},
+  year =	{1927},
+  pages =	{6},
+  url =		{http://www.ecolife.ru/jornal/echo/2003-4-1.shtml},
+  urldate =	{2014-01-25},
+}
+
 @mvbook { vernadsky1930considerations,
   title = {Considerations generales sur l'etude de la composition chimique de
 	  la matiere vivante},
