--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -589,6 +589,48 @@ creation.  The noosphere can be created only under this condition.
 
 
 \Section % 24
+And in own time, since the beginning of the XX c., an exceptional phenomenon is
+observed in the course of scientific thought.  Its rate is emerging as
+completely unusual, unprecedented in the course of many centuries.  Eleven
+years ago I equated it to an explosion---\emph{an explosion of scientific
+creative work.}\footnote{
+	\cite{vernadsky1927mysli}.  A report read at the first assembly of the
+	Committee on the History of Science\footnoteRus{
+		Комиссия по истории знаний
+	},
+	October 14, 1926.
+}
+I can still affirm this now, even more strongly and definitively.
+
+We, in the XX c., are living through a time in the course of scientific
+knowledge, in the course of scientific work in the history of mankind, whose
+equal in significance we can find only in its remote past.
+
+Unfortunately, the conditions of the history of scientific knowledge do not
+allow us currently to make basic logical conclusions precisely and definitely
+from this empirical case.  We can only affirm it as a fact and express it in a
+geological aspect.
+
+The history of scientific knowledge is a history of the creation of a new main
+geological factor in the biosphere---its state of
+organization,\footnoteTransl{
+	\ie of being (constantly) organized.
+}
+identified tempestuously in the recent millenia.  It is not random, but lawful,
+as the paleontological process is lawful in the course of time.
+
+The history of scientific thought is still unwritten, and we are just barely
+beginning---with great labor and big problems---to detect forgotten and
+consciously unrecognized by mankind facts in it---we are beginning to look for
+the major empirical generalizations characterizing it.
+
+We are still unable to scientifically \emph{understand} this large-scale
+phenomenon of great scientific and social importance.  To scientifically
+\emph{understand} means to establish the phenomenon in the framework of
+scientific reality---of the cosmos.  \emph{We} must currently simultaneously
+\emph{strive to scientifically understand} it and use its study for
+establishing the main milestones of \emph{the history of scientific
+thought}---one of mankind's most vitally important scientific disciplines.
 
 . . .
 
