--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -589,11 +589,11 @@ creation.  The noosphere can be created only under this condition.
 
 
 \Section % 24
-And in own time, since the beginning of the XX c., an exceptional phenomenon is
-observed in the course of scientific thought.  Its rate is emerging as
-completely unusual, unprecedented in the course of many centuries.  Eleven
-years ago I equated it to an explosion---\emph{an explosion of scientific
-creative work.}\footnote{
+And in our own time, since the beginning of the XX c., an exceptional
+phenomenon is being observed in the course of scientific thought.  Its rate is
+emerging as completely unusual, unprecedented in the course of many centuries.
+Eleven years ago I equated it to an explosion---\emph{an explosion of
+scientific creative work.}\footnote{
 	\cite{vernadsky1927mysli}.  A report read at the first assembly of the
 	Committee on the History of Science\footnoteRus{
 		Комиссия по истории знаний
@@ -629,10 +629,55 @@ phenomenon of great scientific and social importance.  To scientifically
 \emph{understand} means to establish the phenomenon in the framework of
 scientific reality---of the cosmos.  \emph{We} must currently simultaneously
 \emph{strive to scientifically understand} it and use its study for
-establishing the main milestones of \emph{the history of scientific
-thought}---one of mankind's most vitally important scientific disciplines.
+reaching the main milestones of \emph{the history of scientific thought}---one
+of mankind's most vitally important scientific disciplines.
 
-. . .
+We are living through a fundamental turning point in the scientific worldview,
+occurring during the life of the presently living generations, we are living
+through the creation of vast new areas of knowledge, expanding the
+scientifically encompassed cosmos from the end of the past century, both in its
+spatial, and in its temporal extent, beyond recognition, we are living through
+a shift in the scientific methodology, taking place with a speed which we would
+look for in vain in the preserved chronicles and in the records of world
+science.  New methodologies of scientific work, and new areas of knowledge, new
+sciences, discovering before us millions of scientific facts and millions of
+scientific phenomena, whose existence we did not suspect only yesterday, are
+being created at an ever increasing rate.  The individual scientist can follow
+the course of scientific knowledge only laboriously, and incompletely, as never
+before.
+
+Science is being reformed before our eyes.
+
+But, even more importantly, the impact of science, constantly increasing, on
+our life, on our living and dead---inert---environment is being revealed, it
+seems to me, with a stunning clarity.  Science and the scientific thought
+creating it are identifynig their other, foreign to us, planetary character, in
+this \emph{XX-c.\ growth of science we are living through, in this social
+phenomenon} of mankind's history of deep significance.  Science is being
+revealed to us a new way in it.
+
+We can study this phenomenon we are living through---study it
+scientficially---from two points of view.  On the one hand, as one of the main
+phenomena of the history of scientific thought, and on the other, as a
+manifestation of the structure of the biosphere, revealing to us new major
+characteristics of its state of organization.\footnoteTransl{
+	or state of being (constantly) organized.
+}
+The close and unbreakable connection between these manifestations has never
+stood before mankind with such clarity.
+
+We live in an era when this aspect of the course of scientific thought is being
+identified before us with an exceptional clarity---the course of the history of
+scientific thougth is emerging before us as a natural process in the history of
+the biosphere.
+
+The historical process---the manifestation of the global history of
+mankind---is being revealed before us in one---but a main one---of its
+consequences as a natural phenomenon of immense geological significance.
+
+This was not taken into account in the history of scientific thought as an
+inseparable from it, main characteristic.
+
 
 \Section % 25
 
