Another paragraph from Yansin's foreword.

--- a/tex/bib/vernadsky.bib
+++ b/tex/bib/vernadsky.bib
@@ -599,6 +599,19 @@
   hyphenation = {russian},
 }
 
+@book { vernadsky1977razmyshlenia,
+  title =	{Размышления натуралиста},
+  userb =	{Reflections of the Naturalist},
+  author =	{Владимир Иванович Вернадский},
+  year =	{1977},
+  publisher =	{Наука},
+  location =	{Москва},
+  language =	{russian},
+  hyphenation =	{russian},
+  url =		{http://vernadsky.name/razmy-shleniya-naturalista-1977/},
+  urldate =	{2014-04-19},
+}
+
 @inbook { vernadsky1980problemy,
   title = {Проблемы биогеохимии},
   author = {Владимир Иванович Вернадский},
@@ -687,14 +700,15 @@
 }
 
 @book { vernadsky1991thought,
-  title = {Научная мысль как планетное явление},
-  author = {Владимир Иванович Вернадский},
-  year = {1991},
-  origdate = {1938},
-  publisher = {Наука},
-  editor = {А. Л. Яншин},
-  language = {russian},
-  hyphenation = {russian},
+  title =	{Научная мысль как планетное явление},
+  userb =	{Scientific Thought as a Planetary Phenomenon},
+  author =	{Владимир Иванович Вернадский},
+  year =	{1991},
+  origdate =	{1938},
+  publisher =	{Наука},
+  editor =	{А. Л. Яншин},
+  language =	{russian},
+  hyphenation =	{russian},
 }
 
 @inbook { vernadsky1992trudy,
