--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -1,4 +1,4 @@
-\ChapterByLine{Preface and remarks by A.~L.\ Yanshin~\dots}{%
+\ChapterByLine{Preface and Remarks by A.~L.\ Yanshin~\dots}{%
 A.~L.\ Yanshin\\
 {\rm\normalsize Chairman of the Committe of the Academy of Sciences of the USSR
 for the Exploitation of the Scientific Heritage of Academician V. I.
@@ -560,5 +560,13 @@ with the transformation of the biosphere into the noosphere will be eliminated.
 Now his forecasts have started to come true.
 
 \section*{Remarks}
+
+In Vernadsky's manuscript \btcite{vernadsky1991thought}, written in 1938 and
+kept in archive of the Academy of Sciences of the USSR, after section 150,
+whose text was redacted from the 1977 edition of the book
+\btcite{vernadsky1977razmyshlenia}, and restored in full in the book
+\btcite{vernadsky1988filosofskie}, published in 1988, six more sections follow,
+about which I.~I.~Mochalov and K.~P.~Florenskiy wrote as follows in their
+commentaries to the 1977 edition:
 
 . . .
