--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -680,12 +680,62 @@ inseparable from it, main characteristic.
 
 
 \Section % 25
+So far the history of mankind and the history of its spiritual manifestations
+has been studied as a self-contained phenomenon, manifested freely and without
+lawfulness on the Earth's surface, in its environment, as something foreign to
+it.  The social forces manifested in it are considered as largely independent
+from the enviorment in which mankind's history is occurring.
 
-. . .
+Even though many different attempts to connect mankind's spiritual
+manifestations and mankind's history in general with the environment in which
+they are taking place exist, it is always missed that, first, this
+environment---the biosphere---has a completely definite structure, determining
+\emph{everything, without exception, occuring in it, }unable to be
+fundamentally disrupted by the processes occurring in it, that it has, as a
+natural phenomenon, its lawful transformations in space-time.
+
+The explosion in scientific work is occurring, and plays a part in creating, to
+a certain degree creates the transformation of the biosphere into the
+noosphere.  Nevertheless, man oneself, both in one's individual, and in one's
+social manifestation, is most closely lawfully, materially-energetically
+connected with the biosphere; this connection never ceases, as long as one
+exists, and has no significant difference from that of other biospheric
+phenomena.
+
 
 \Section % 26
+Let us consider the following scientific-empirical generalizations.
 
-. . .
+\begin{enumerate}
+  \item Man, as he is observed in nature, like all living organisms, like all
+  living matter, is a definite \emph{function of the biosphere }in its definite
+  space-time.
+
+  \item Man, in all of his manifestations, comprises a definite, lawful part of
+  the structure of the biosphere.
+
+  \item The ``explosion'' of scientific thought in the XX century \emph{has
+  been prepared by the whole foregoing biosphere }and has deep roots in its
+  structure---it cannot cease and turn back.  It can only be slowed down in its
+  rate.  The noosphere---the biosphere transformed by scientific thought,
+  prepared by processes occuring for hundreds of millions, perhaps billions, of
+  years, which created Homo sapiens faber---\emph{is not a short-term and
+  passing geological phenomenon. }Processes prepared for many billions of years
+  could not be passing, and could not cease.  It follows, thence, that the
+  biosphere will unavoidably transform, in one way or another,---sooner or
+  later---into the noosphere, \ie\ that events necessary therefore, but not
+  contradicting this process, will occur in the histories of peoples populating
+  it.
+\end{enumerate}
+
+The civilization of ``cultural mankind''---as far as it is a form of
+organization of a new geological force emerging in the biosphere---\emph{cannot
+be broken off and destroyed, }since it is a great natural phenomenon,
+corresponding historically, or rather geologically, to the state of
+organization developed in the biosphere.  Forming the noosphere, it is
+connected with all of its roots to that earthly envelope, which earlier did not
+exist to any comparable degree in mankind's history.
+
 
 \Section % 27
 
