--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -738,8 +738,41 @@ exist to any comparable degree in mankind's history.
 
 
 \Section % 27
+All of the past historical experience and the events of the moment we are
+currently living through seem to contradict this.
 
-. . .
+I cannot continue without pausing, even shortly, here.  It seems to me that the
+creation of the noosphere by human thought and labor, which has now begun,
+changes all the circumstances of mankind's history, does not allow us to simply
+compare the past with the present, as was admissible earlier.
+
+Everyone is familiar with numerous, not only extensive interruptions in the
+growth of scientific thought, but also the loss and destruction of scientific
+achievements, reached over many earlier centuries.  We can see times of sharply
+expressed regression, which encompassed great territories and physically
+destroyed whole civilizations that did not contain in themselves unavoidable
+reasons for it.  The processes connected with the destruction of the
+Greco-Roman civilization held back mankind's scientific work for many
+centuries, and much that was achieved before was lost for long, and, often,
+forever.  We can see the same in the ancient civilizations of India and the Far
+East.
+
+The fears and alarm of such a forceful breakdown in our time, after the world
+war of 1914--1918, one of the greatest manifestations of mankind's barbarism,
+that have spread among a wide circle of thinkers, therefore, seem
+understandable and unavoidable.  Government forces, as we can now clearly see,
+did not prove to be up to the situation after the war's dying out, and we have
+been living through the consequences of the unstable situation over the last 20
+years, connected with a deep moral breaking point---a consequence of the world
+slaughter house, the pointless death of more than ten million people over four
+years, and countless losses of peoples' labor.  Twenty years after the end of
+the war, we face today the danger of a new---even more barbaric and more
+pointless---war.  Now, not only in fact, but also ideologically, the method of
+war is the extermination of not only the armed participants, but also the
+peaceful population, including old men, old women, and children.  That which
+had remained in the past like an ideal, and was morally unacceptable has now
+become a cruel reality.
+
 
 \Section % 28
 
