--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -775,6 +775,27 @@ become a cruel reality.
 
 
 \Section % 28
+As a result of the war of 1914--1918, leading to the breakdown of the most
+powerful nations with centuries-old traditions, nations which were the least
+democratic in their centuries-old ideals, the least free---the anchors of the
+old traditions in Europe---a fundamental reconsideration of values occurred.
+The idea of the ``equality'' of all people, expressed in the specific framework
+of Christian religion, lied at the foundation of these nations.  It was the
+basis of Christian morals.  However, reality never corresponded to this basic
+principle of Christianity (and, ever more, of Islam), even though it was loudly
+proclaimed everywhere in the Christian nations, and was---at face value---the
+basis of national morals.  Something completely different occured in reality,
+and the Christian nations of the white races carried out, practically, all of
+the colonial politics in the course of centuries, acknowledging equality in
+words, they mercilessly opressed, exterminated, and exploited peoples and
+nations of the non-white races.  The war of 1914--1918 stirred up the whole
+world, and uncovered the radical contradiction between words and deeds in front
+of all, raised the power and significance of the non-white races.
+
+This did not concern the moral significance of Islam and Buddhism, since in
+them---in the actual politics of nations where they were preached---there did
+not exist the contradiction which was in Christian nations.  These religions
+observed the equality of all people of the same religion in national activity.
 
 . . .
 
