--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -782,9 +782,9 @@ old traditions in Europe---a fundamental reconsideration of values occurred.
 The idea of the ``equality'' of all people, expressed in the specific framework
 of Christian religion, lied at the foundation of these nations.  It was the
 basis of Christian morals.  However, reality never corresponded to this basic
-principle of Christianity (and, ever more, of Islam), even though it was loudly
+principle of Christianity (and, even more, of Islam), even though it was loudly
 proclaimed everywhere in the Christian nations, and was---at face value---the
-basis of national morals.  Something completely different occured in reality,
+basis of national morals.  Something completely different occurred in reality,
 and the Christian nations of the white races carried out, practically, all of
 the colonial politics in the course of centuries, acknowledging equality in
 words, they mercilessly opressed, exterminated, and exploited peoples and
@@ -797,7 +797,64 @@ them---in the actual politics of nations where they were preached---there did
 not exist the contradiction which was in Christian nations.  These religions
 observed the equality of all people of the same religion in national activity.
 
-. . .
+The moral consequences of the war of 1914--1918 were collosal, and turned out
+to be unexpected for its initiators and actors.  Central is the radical change
+of national ideology, deviating more or less strongly from Christianity,
+leading to the division of mankind into opposed, warring, ideologically
+irreconcilable groups of nations.
+
+This was the ideologically unexpected consequence of the fight for religious
+tolerance---the destruction of national churches, or their practical
+powerlessness in their nations.  A kind of state religion emerged.
+
+State ideologies, openly founded on \emph{the idea of the inequality of
+people,} a deep, biological inequality, were established for the first time
+under these conditions, and received power and development.  Inequality became
+a form of state religion or philosophy, not covered up by the ideal of one
+religion for all mankind, \emph{of the equality of all people.}  Inequality was
+proclaimed within the white race, as well, and was promoted by the force of
+govenment powers.  Peoples---state pariahs---emerged.  The moral values of
+Christianity and ``civilized'' nations faded.  As a result, we can see a sharp
+moral division of mankind into state communities of different morals.
+
+War connected with the extermination of populations, with the application of
+all means for that purpose is accepted as right for the state, as this was
+before the emergence of Christianity, when the means for extermination and
+destruction were negligibly small compared to their contemporary power, which
+is theoretically unlimited for us.
+
+In Germany: where the German race and racial state equality is accepted as the
+basis for the state, in Italy: where the equality of rights of the Roman
+citizen from the time of the Roman Empire, of his legal equality is being
+exhibited, and in Japan: where a special position is accepted for Japan among
+mankind, as a state created by the son of the Son.  Everything is accepted as
+possible and allowable for these states: \lphr{salus reipublicae suprema
+lex.}\footnoteEd{
+	The welfare of the republic is the supreme law.
+}
+At the same time, these states have the view that their population, their
+first-class citizens, do not have sufficient territory for their development
+and growth.
+
+For them a most gruesome war, which is inevitable, since they are meeting an
+understandable resistance to their aggression, is an unavoidable fact of their
+activity.
+
+Their state ideology is an ideology of the past.  Remarkably, not delving into
+the complexity of the process occurring in our evironment, restoring a state
+ideology of past times, which contradicts it, essentially only scratching the
+surface, they are openly clashing with scientific generalizations, denied by
+them, they are fighting wind mills with the active power of government decrees.
+
+As it was over the past millenia, they are attempting to determine scientific
+truth by government decrees, accepting state-organized murder as a moral good,
+aiding the development of virtue in the governing race.
+
+Their ideal is built upon the ideological acceptance of the biological
+inequality of human races.  Their constructs do not consider scientific
+achievements; the philosophy justifying their state tasks, if necessary,
+distorts scientific achievements or casts them aside.
+
 
 \Section % 29
 
