--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -857,8 +857,31 @@ distorts scientific achievements or casts them aside.
 
 
 \Section % 29
+An unstable situation, which can bring great misfortune, [though] far from the
+collapse of contemporary world civilization, is being created.  Our
+civilization's foundations are too deep to be able to be shaken by the events
+that are shocking our contemporaries.
 
-. . .
+Even the experience of 1914--1924 has already clearly shown that.  Fourteen
+years have passed, and we can clearly see that the growth of science and the
+power of mankind in surrounding nature are increasing with unstoppable
+strength.
+
+Nowhere do we see any weakening of the scientific movement in the midst of
+wars, exterminations, the death of people from murder and disease.  All of
+these losses are quickly returned for by the powerful uplift of the realized
+accomplishments of science, and the organization of government power and
+engineering encompassed by it.  It even seems that in this cycle of human
+misfortune it grows further, and itself contains the means of ending the
+attempts to establish barbarism.
+
+
+It is now necessary to take into account circumstances which never existed in
+such a degree earlier.  What we are living through could not be prolonged and
+enduring, and could not put an end to the transformation of the biosphere into
+the noosphere observed by us, although, we may have to live through the
+attempts of barbaric wars, fighting against a clearly unequal force.
+
 
 \Section % 30
 
