--- a/tex/bib/thought.bib
+++ b/tex/bib/thought.bib
@@ -269,6 +269,29 @@
   language =	{french},
 }
 
+@mvbook { sarton1927introduction,
+  author =	{George Sarton},
+  title =	{Introduction to the History of Science},
+  location =	{Cambridge},
+  year =	{1927/1931},
+}
+
+@book { sarton1927introduction-v1,
+  crossref =	{sarton1927introduction},
+  year =	{1927},
+  volume =	{1},
+}
+
+@book { sarton1931introduction-v2,
+  crossref =	{sarton1927introduction},
+  year =	{1931},
+  volume =	{2},
+}
+
+@set { sarton1927introduction-set,
+  entryset =	{sarton1927introduction-v1, sarton1931introduction-v2}
+}
+
 @inbook { leroy1928origines-p37-57,
   title = {Les origines humaines et l'evolution de l'intelligence},
   booktitle = {La noosphere et l'hominisation},
