--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -884,8 +884,48 @@ attempts of barbaric wars, fighting against a clearly unequal force.
 
 
 \Section % 30
+The main geological force creating the noosphere consists of the growth of
+scientific knowledge.
 
-. . .
+As a result of long arguments about the existence of progress manifest
+incessantly in human history, it can now be affirmed that \emph{only in the
+history of scientific knowledge has the existence of progress in the course of
+time been proven.} We can observe durable progress with interruptions, but
+without regression in no other areas of human life, neither in the national and
+economic aspect, nor in the improvement of life for mankind---the improvement
+of the basic conditions of the existence of all people, of their happiness.  We
+cannot observe it in the area of the moral philosophical and religious
+condition of human societies, either.  We can clearly observe it, however, in
+the course of scientific knowledge, \ie{} of the increse of the geological
+force of civilized man in the biosphere, in the growth of the noosphere.
+
+G. Sarton\footnote{
+	\cite{sarton1927introduction-v1},
+	\cite{sarton1931introduction-v2}
+}
+proved in his book that, beginning with the VII c.\ AD, taking half centuries
+and considering the whole of humanity, rather than only Western European
+civilization, \emph{the growth of scientific knowledge was incessant.} And,
+with short interruptions, its rate has increased, and is increasing.
+
+It is interesting that the same character of its growth curve can be observed
+in the paleontological evolution of animal living matter---in the growth if its
+central nervous system.
+
+It seems to me that, if we consider the history of the improvement of the
+technology of life, this process would be expressed even more distinctly and
+strongly.  We do not yet have such history.  It is starting to be manifest with
+XI--XII c.\ AD, in the last chapters of Sarton's work.
+
+Obviously, 50 years, say, two generations, indicates the average precision with
+which we can identify this phenomenon.  Taking, for example, two thousand years
+back, we exceed that precision many times.
+
+Unfortunately, this scientific empirical generalization is usually not taken
+into account, yet it has a vast significance.  Of course, it needs to be made
+more precise, but the fact itself raises no doubt, and further research shall,
+perhaps, show that it was even more clearly expressed than we presently think.
+
 
 \Section % 31
 
