--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -928,8 +928,87 @@ perhaps, show that it was even more clearly expressed than we presently think.
 
 
 \Section % 31
+The following phenomena can be currently observed, and compell us to think that
+the fear of the possibility of civilization's destruction (of the growth and
+resilience of the noosphere) are baseless.
 
-. . .
+First, the universality\footnoteRus{
+	вселенскости, \ie{} `ecumenicism' (see \autoref{ch:3}).
+} of mankind observable today---on the one hand, the complete encompassing of
+the biosphere for human life by mankind, and, on the other, the lack of the
+isolation\footnoteTransl{historical isolation} of individual populations thanks
+to the speed of communication and transportation---has never before existed in
+the history of mankind.  Intercourse can occur instantaneously, and is loudly
+proclaimed for everyone.  Soon it may be possible to make events occurring
+thousands of kilometers away visible to all.  The movement and transfer of
+goods may be accelerated, theoretically, to any degree, and their rate is
+rising quickly, as never berofe.
+
+Second, the interests and the good of all, rather than of individuals or
+groups, have never before in human history become a real national goal, and the
+population masses are receiving a constantly increasing possibility to
+consciously influence the course of national and social affairs.  For the first
+time the fight against poverty and its consequences (hunger) has been posed as
+a real biological-scientific, and national technical task, and now cannot leave
+our sight.
+
+Third, the problem of the conscious regulation of reproduction, of the
+extention of life, and of the reduction of the threat of disease for all
+mankind has been posed as a task for the first time.
+
+The task of scientific knowldege's reaching of all mankind has been posed for
+the first time.
+
+Such a totality of all-encompassing actions and ideas has never existed before,
+and it is clear that this movement cannot be stopped.  In particular,
+unprecedented tasks for the conscious guidance of the noosphere's state of
+organization, from which they cannot turn away, since its tempestuous course of
+the increase of human knowledge is driving them in that direction, stand before
+scientists for the near future.
+
+There is another circumstance which has not exhibited a clear expression, but
+which is readily evinced.  It is \emph{the internationality of science,} its
+striving for freedom of thought, and the consciousness of the moral
+responsibility of scientists for the use of scientific discoveries and
+scientific work for destructive aims, contradicting the idea of the noosphere.
+This current of thought has not become established, yet, but it seems to me the
+global scientific popular opinion has been quickly building up and expanding in
+that direction in recent years.  In the history of philosophy and science,
+especially during the age of the Rennaisance and in the beginning of the modern
+age, when Latin was the language of science, regardless of nations and
+nationalities, the real, but amorphous scientific
+international\footnoteRus{интернационал ученых} played a major role, and had
+deep roots in the Medieval unity of the real, but amorphous centuries-old
+philosophical and scientific international\footnoteRus{интернационала философов
+и ученых}.
+
+Thus, the traditions of the scientific international have deep roots, the
+recognition of its necessity is spreading more and more, and this current is
+coming in unison with the emergence of the noosphere as a whole.  However, this
+time the character of the scientific international must unavoidably differ from
+the one which was concealed in the Muslim and the Catholic environment, under
+the face of the orthodoxy, more pilosophical than scientific, of the circle of
+the Medieval generations of scientists.  Now scientists are an actual force;
+specialists, engineers and theoretical economists, applied chemists,
+zootechnicians, agronomists, doctors (who already played an important role
+earlier) comprise the main population element and represent the whole creative
+force of the leaders of nations.
+
+All mentioned so far indicates that the real circumstance in our tumultuous and
+bloody time cannot allow the development and victory of the forces of
+barbarization, which currently seem to be occupying a prominent position.  All
+fears and conclusions of the inhabitants, representing humanitarian and
+philosophical disciplines, about the possibility of the death of human
+civilization are connected to the underestimation of the strength and depth of
+geological processes, such as the currently occurring one of the transition of
+the biosphere into the nosphere that we are living through.
+
+Further on I shall return to the clarification of [the concept of] the
+noosphere, and the immutability of its emergence and of the emergence of new
+forms of human life itself.
+
+Now, a few more considerations about the course of scientific knowledge.
+
 
 \Section % 32
 
