--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -1011,8 +1011,70 @@ Now, a few more considerations about the course of scientific knowledge.
 
 
 \Section % 32
+In order to scientifically understand the occurring movement of science,
+reality must be, first of all, located in the framework of the scientific
+grasp, and the course of scientific knowledge must be logically connected with
+it.  The history of mankind, as well as the life of each individual human
+personality, cannot be taken apart, and viewed separately from its
+`environment.'  This claim raises no doubt in this general form, no matter what
+definition of `environment' we may give, and no matter what claims of the
+necessity of admitting other, equally-significant factors, independent of the
+environment, we may allow, proceeding from philosophical or religious
+constructs.
 
-. . .
+Proceeding from this basic tenet in the scientific grasp of nature---of the
+causal connection of all phenomena in our surroundings---all phenomena are
+reduced to a unity.  The existence of factors independent `of the environment'
+is not accepted in science, proceeding from the unity of reality, the unity of
+the cosmos.
+
+I am not getting into explanation of this method of scientific thinking, proof
+of its correctness, or necessity.  I am only observing the actually occurring,
+whose force and correctness is manifested at every step of the contemporary
+scientific thinking which is building all aspects of our lives.
+
+Standing on the basis of scientific investigation, and thinking logically
+correctly, I have no necessity to go further.
+
+The development of science in the 20th century has lead---unexpectedly, purely
+empirically---to the limitation of this centuries-old rule of scientific work.
+\emph{Three independent layers of reality} have been distinguished, in whose
+boundaries the scientifically establishable facts are located.  These three
+layers are, apparently, strongly distinct in their space-time properties.  They
+penetrate each other, but are definitively bounded, and clearly distinguished
+from each other in their contents, and in the methods of studying their
+phenomena.  These layers are: the phenomena of space expanses, planetary
+phenomena, of our nearby `nature,' and microscopic phenomena, in which
+gravitation occupies a second place.
+
+Scientifically, the phenomena of life are observed in only the last two layers
+of universal reality.
+
+In the scientific grasp of reality there is no necessity to consider other
+conceptions, allowing the existence of constructs not considered by scientific
+investigation and undiscoverable by it, in the scientifically studied reality.
+The usual, dominant conceptions of the world---of reality---are overflowing
+with religious, philosophical, historical-everyday and social constructs, often
+contradicting scientifically accepted ones, and sometimes taken into
+consideration by invidual researchers, or groups of researchers.
+
+The contradictions between these conceptions permeate science; the scientific
+grasp of reality is constantly running into them.  It breaks the constructs
+foreign to it when that becomes necessary, and all other conceptions of reality
+developed by mankind---religious, philosophical, socio-national---are forced to
+take it into account, if it is correctly carried out, and have to be reworked
+and yield to it, in cases of contradiction with scientifically discovered
+truth.  \emph{The primacy of scientific thought} in its domain---scientific
+work---always exists, whether it is acknowledged, or not makes no difference.
+Its correctly formed theses are obligatory for all.  This does not depend on
+our will.  This is characteristic of only scientific truth in the spiritual
+life of mankind.
+
+In essence, this claim needs no proof, it follows as an empirical \emph{fact}
+from observations of the course of the history of scientific thought.
+
+In moments like the present one this becomes especially clear.
+
 
 \Section % 33
 
